[project]
name = "personal-content-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncddgs>=0.1.0a1",
    "ddgs>=9.14.2",
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pydantic-ai>=1.89.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
namespace_packages = true
disallow_untyped_decorators = false
warn_unused_ignores = false
disable_error_code = ["call-overload"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# This tells pytest to look in the root folder for modules like 'agent'
pythonpath = ["."]
testpaths = ["test"]
asyncio_mode = "auto"